# EAGS-SLAM

./: .gitignore  README.md  environment.yml  reproducing.sh  requirements.txt  run_slam.py
VO/: CMakeLists.txt  main.cpp
VO/config/: dataset_tum1.yaml  vo_settings.yaml
VO/datastructures/: camerapyr.h  imgpyramidrgbd.cpp  imgpyramidrgbd.h
VO/io/: iowrapperRGBD.cpp  iowrapperRGBD.h
VO/pybind/: vo.cpp
VO/system/: optimizer.cpp  optimizer.h  system.cpp  system.h  tracker.cpp  tracker.h
VO/utils/: LGSX.h
configs/Replica/: office0.yaml  office1.yaml  office2.yaml  office3.yaml  office4.yaml  replica.yaml  room0.yaml  room1.yaml  room2.yaml
configs/ScanNet/: scannet.yaml  scene0000_00.yaml  scene0059_00.yaml  scene0106_00.yaml  scene0169_00.yaml  scene0181_00.yaml  scene0207_00.yaml
configs/TUM_RGBD/: rgbd_dataset_freiburg1_desk.yaml  rgbd_dataset_freiburg1_desk2.yaml  rgbd_dataset_freiburg1_room.yaml  rgbd_dataset_freiburg2_xyz.yaml  rgbd_dataset_freiburg3_long_office_household.yaml  tum_rgbd.yaml
configs/VO/: vo_settings.yaml
configs/VO/replica/: office0.yaml  office1.yaml  office2.yaml  office3.yaml  office4.yaml  room0.yaml  room1.yaml  room2.yaml
configs/VO/scannet/: scene0000_00.yaml  scene0059_00.yaml  scene0106_00.yaml  scene0169_00.yaml  scene0181_00.yaml  scene0207_00.yaml
configs/VO/scannetpp/: 281bc17764.yaml  2e74812d00.yaml  8b5caf3398.yaml  b20a261fdf.yaml  fb05e13ad1.yaml
configs/VO/tum/: rgbd_dataset_freiburg1_desk.yaml  rgbd_dataset_freiburg1_desk2.yaml  rgbd_dataset_freiburg1_room.yaml  rgbd_dataset_freiburg2_xyz.yaml  rgbd_dataset_freiburg3_long_office_household.yaml
configs/scannetpp/: 281bc17764.yaml  2e74812d00.yaml  8b5caf3398.yaml  b20a261fdf.yaml  fb05e13ad1.yaml  scannetpp.yaml
scripts/: scannet_preprocess.py
src/entities/: arguments.py  datasets.py  gaussian_model.py  gaussian_slam.py  lc.py  logger.py  losses.py  mapper.py  submap.py  tracker.py
src/evaluation/: evaluate_merged_map.py  evaluate_reconstruction.py  evaluate_trajectory.py  evaluator.py
src/gsr/: camera.py  descriptor.py  loss.py  overlap.py  renderer.py  solver.py  utils.py
src/utils/: eval_utils.py  gaussian_model_utils.py  graphics_utils.py  mapper_utils.py  tracker_utils.py  utils.py
